--- a/spring-cloud-server/spring-cloud-server1/src/main/resources/application.yml
+++ b/spring-cloud-server/spring-cloud-server1/src/main/resources/application.yml
@@ -3,7 +3,16 @@ server:
 spring:
   application:
     name: server1
+  zipkin:
+    base-url: http://192.168.5.48:9411/
+    enabled: true
+  sleuth:
+    sampler:
+      percentage: 1
 eureka:
   client:
     service-url:
       defaultZone: http://192.168.5.49:8765/eureka
+logging:
+  level:
+    root: info
