--- a/spring-cloud-server/spring-cloud-server3/src/main/resources/application.yml
+++ b/spring-cloud-server/spring-cloud-server3/src/main/resources/application.yml
@@ -3,6 +3,12 @@ server:
 spring:
   application:
     name: server3
+  zipkin:
+      base-url: http://192.168.5.48:9411/
+      enabled: true
+  sleuth:
+    sampler:
+      percentage: 1
 eureka:
   client:
     service-url:
