--- a/spring-cloud-server/build.gradle
+++ b/spring-cloud-server/build.gradle
@@ -56,7 +56,7 @@ subprojects {
 //        compile 'org.springframework.boot:spring-boot-starter-web:1.5.14.RELEASE'
 
         compile 'com.alibaba:fastjson:1.2.28'
-        compile 'com.weibo:filter-opentracing:1.0.0'
+//        compile 'com.weibo:filter-opentracing:1.0.0'
 
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
