--- a/spring-cloud-server/spring-cloud-server1/src/main/resources/application.yml
+++ b/spring-cloud-server/spring-cloud-server1/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+management:
+  security:
+    enabled: false
 server:
   port: 8801
 spring:
@@ -11,6 +14,8 @@ spring:
       percentage: 1
 eureka:
   client:
+    healthcheck:
+      enabled: true
     service-url:
       defaultZone: http://192.168.5.49:8765/eureka
 logging:
