--- a/spring-cloud-zuul/build.gradle
+++ b/spring-cloud-zuul/build.gradle
@@ -1,5 +1,13 @@
+buildscript {
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.14.RELEASE")
+        classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
+    }
+}
+
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '1.5.14.RELEASE'
 }
 
 group 'com.xiamoan.springcloud'
@@ -8,9 +16,47 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    maven {
+//        url 'http://192.168.1.45:8081/nexus/content/groups/public/'
+        url 'https://repo.spring.io/libs-snapshot'
+        'http://repo.spring.io/libs-milestone'
+        'http://maven.springframework.org/snapshot'
+        'http://maven.springframework.org/milestone'
+    }
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//subprojects {
+
+ext {
+    springBootVersion = '1.5.14.RELEASE'
 }
+
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+            mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Edgware.SR4'
+        }
+    }
+
+    dependencies {
+        compile 'org.springframework.cloud:spring-cloud-starter-config'
+        compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+        compile 'org.springframework.cloud:spring-cloud-starter-feign'
+        compile 'org.springframework.cloud:spring-cloud-starter-zipkin'
+        compile 'org.springframework.cloud:spring-cloud-starter-zuul'
+
+        compile 'com.netflix.hystrix:hystrix-metrics-event-stream'
+
+        compile 'org.springframework.boot:spring-boot-starter-actuator'
+
+        compile 'com.alibaba:fastjson:1.2.28'
+//        compile 'com.weibo:filter-opentracing:1.0.0'
+
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+    }
+//}
