--- a/spring-cloud-server/spring-cloud-server1/src/main/resources/application.yml
+++ b/spring-cloud-server/spring-cloud-server1/src/main/resources/application.yml
@@ -21,3 +21,4 @@ eureka:
 logging:
   level:
     root: info
+server2.ribbon.NFLoadBalancerRuleClassName: com.netflix.loadbalancer.BestAvailableRule
